@@ -1,3 +1,8 @@
+2007-11-13  Matthieu Nottale  <nottale@gostai.com>
+
+	Fix binary transmission in remote method call.
+	* src/ucommand.cc: Don't send message as c-string.
+
 2007-11-12  Akim Demaille  <demaille@gostai.com>
 
 	Fix error message.
